change deployment labels
