# server/application-server/openapi.yaml
@@ -32,9 +32,9 @@ paths:
               type: string
               enum:
               - NONE
-              - TEST_SERVER
-              - STAGING_SERVER
-              - PRODUCTION_SERVER
+              - DEPLOY_TEST_SERVER
+              - DEPLOY_STAGING_SERVER
+              - DEPLOY_PRODUCTION_SERVER
         required: true
       responses:
         "200":
@@ -1149,9 +1149,9 @@ components:
           type: string
           enum:
           - NONE
-          - TEST_SERVER
-          - STAGING_SERVER
-          - PRODUCTION_SERVER
+          - DEPLOY_TEST_SERVER
+          - DEPLOY_STAGING_SERVER
+          - DEPLOY_PRODUCTION_SERVER
         createdAt:
           type: string
           format: date-time
